--- a/RayTracingNextWeek/.vscode/tasks.json
+++ b/RayTracingNextWeek/.vscode/tasks.json
@@ -12,9 +12,9 @@
         "-std=c++17",
         "-stdlib=libc++",
         "-g",
-        "${file}", //多个文件可以写成 "${workspaceFolder}/*.cpp"
+        "${workspaceFolder}/main.cc", //多个文件可以写成 "${workspaceFolder}/*.cpp"
         "-o",
-        "${fileDirname}/${fileBasenameNoExtension}"
+        "${fileDirname}/out"
       ],
       "options": {
         "cwd": "${workspaceFolder}"
